--- a/css/MainActivity.css
+++ b/css/MainActivity.css
@@ -15,17 +15,6 @@ Material Switches:
 }
 .mdl-switch.is-upgraded {
     padding-left: 0px; }
-    
-/*
-Cards:
-  Remove some padding between title and text
-*/
-.mdl-card__title {
-  padding-bottom: 4px;
-}
-.mdl-card__supporting-text {
-  padding-top: 4px;
-}
 
 .container-fluid {
     position: absolute;
@@ -35,4 +24,39 @@ Cards:
     right: 0;
     display: flex;
     flex-direction: column;
+}
+
+.mdl-tooltip-forced {
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
+  z-index: 999;
+  background: rgba(97,97,97, 0.9);
+  border-radius: 2px;
+  color: rgb(255,255,255);
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 14px;
+  max-width: 240px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px;
+  text-align: center;
+}
+
+/*
+#page_about {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/assets/about.png") no-repeat center center;
+  position: fixed;
+  z-index: 0;
+  overflow: auto;
+  background-size: calc(100% + 50px);
+  color: #fff;
 }
