--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -1,3 +1,20 @@
+/*body {
+  .material-icons {
+  font-family: 'Roboto';
+  color: rgba(0, 0, 0, 0.3) !important;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}*/
+
 .nofocus:focus {
   outline: none !important;
   border: none !important;
@@ -11,19 +28,131 @@
   padding-bottom: 0px;
 }
 
+.sidepadding {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .pref-label {
   width: calc(75%);
   height: 100%;
   margin: 0px;
   display: flex;
+  line-height: 1.15;
   align-items: center;
 }
 
 .center-vertically {
-  display: flex;
-  align-items: center;
+  display: flex !important;
+  align-items: center !important;
 }
 
 .divider-top {
   border-top: 1px solid rgba(0,0,0,.1);
 }
+
+
+a, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: #03A9F4;
+}
+
+/* Fixes */
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    height: 0px;
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+    text-decoration: none;
+}
+
+.mdl-layout__drawer-button {
+  outline: none !important;
+  border: none !important;
+  -moz-appearance:none;
+}
+
+.mdl-textfield__input {
+  margin: 8px 0;
+  text-align: center !important;
+  padding: unset;
+}
+
+
+.mdl-textfield__label {
+  text-align: center !important;
+  top: 29px;
+}
+
+
+.mdl-textfield__error {
+  width: 256px;
+}
+
+.mdl-switch.is-checked .mdl-switch__track {
+    background: rgba(179, 229, 252, 0.5);
+}
+    
+.mdl-switch.is-checked .mdl-switch__thumb {
+    background: #03A9F4;
+    left: 16px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+}
+
+.mdl-switch__ripple-container .mdl-ripple {
+    background: rgb(179, 229, 252);
+}
+
+.mdl-switch.is-focused.is-checked .mdl-switch__focus-helper {
+    box-shadow: 0 0 0px 20px rgba(179, 229, 252, 0.26);
+    background-color: rgba(179, 229, 252, 0.26);
+}
+
+.mdl-switch__ripple-container {
+  right: 4px;
+  left: unset;
+}
+
+.mdl-switch.is-checked .mdl-switch__ripple-container {
+    left: unset;
+    right: -12px;
+}
+
+.mdl-textfield__label:after {
+    background-color: #03A9F4;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
