--- a/css/MainActivity.css
+++ b/css/MainActivity.css
@@ -48,15 +48,6 @@ Material Switches:
   text-align: center;
 }
 
-/*
-#page_about {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/assets/about.png") no-repeat center center;
-  position: fixed;
-  z-index: 0;
-  overflow: auto;
-  background-size: calc(100% + 50px);
-  color: #fff;
+.mdl-textfield__input {
+  cursor: default;
 }
