--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -1,24 +1,32 @@
-/*body {
-  .material-icons {
-  font-family: 'Roboto';
-  color: rgba(0, 0, 0, 0.3) !important;
-  font-weight: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}*/
+html {
+  font-size: 16px;
+}
+
+.page {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  opacity: 0;
+}
+
+.drag {
+  -webkit-app-region: drag;
+}
+
+.no-drag {
+  -webkit-app-region: no-drag;
+}
 
 .nofocus:focus {
   outline: none !important;
   border: none !important;
-  -moz-appearance:none;
+  -moz-appearance: none;
 }
 
 .nosidepadding {
@@ -48,66 +56,82 @@
 }
 
 .divider-top {
-  border-top: 1px solid rgba(0,0,0,.1);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-
-a, a:visited, a:hover, a:active {
+a,
+a:visited,
+a:hover,
+a:active {
   text-decoration: none;
-  color: #03A9F4;
+  color: #03a9f4;
 }
 
 /* Fixes */
 ::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    height: 0px;
-    background: transparent;  /* optional: just make scrollbar invisible */
+  width: 0px;
+  height: 0px;
+  background: transparent;
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .mdl-layout__drawer-button {
   outline: none !important;
   border: none !important;
-  -moz-appearance:none;
+  -moz-appearance: none;
 }
 
 .mdl-textfield__input {
-  margin: 8px 0;
+  /* margin: 8px 0; */
   text-align: center !important;
-  padding: unset;
+  /* padding: unset; */
 }
 
-
-.mdl-textfield__label {
-  text-align: center !important;
-  top: 29px;
+.mdl-js-snackbar {
+  width: 75%;
 }
 
+.mdl-js-snackbar .mdl-snackbar__text {
+  padding-left: 12px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 8px;
+}
+
+.mdl-js-snackbar .mdl-snackbar__action {
+  padding-right: 12px;
+  margin: 8px;
+}
+
+.mdl-textfield__label::after {
+  bottom: 12px;
+}
 
 .mdl-textfield__error {
-  width: 256px;
+  width: 128px;
 }
 
 .mdl-switch.is-checked .mdl-switch__track {
-    background: rgba(179, 229, 252, 0.5);
+  background: rgba(179, 229, 252, 0.5);
 }
-    
+
 .mdl-switch.is-checked .mdl-switch__thumb {
-    background: #03A9F4;
-    left: 16px;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+  background: #03a9f4;
+  left: 16px;
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.2),
+    0 1px 8px 0 rgba(0, 0, 0, 0.12);
 }
 
 .mdl-switch__ripple-container .mdl-ripple {
-    background: rgb(179, 229, 252);
+  background: rgb(179, 229, 252);
 }
 
 .mdl-switch.is-focused.is-checked .mdl-switch__focus-helper {
-    box-shadow: 0 0 0px 20px rgba(179, 229, 252, 0.26);
-    background-color: rgba(179, 229, 252, 0.26);
+  box-shadow: 0 0 0px 20px rgba(179, 229, 252, 0.26);
+  background-color: rgba(179, 229, 252, 0.26);
 }
 
 .mdl-switch__ripple-container {
@@ -116,43 +140,14 @@ a, a:visited, a:hover, a:active {
 }
 
 .mdl-switch.is-checked .mdl-switch__ripple-container {
-    left: unset;
-    right: -12px;
+  left: unset;
+  right: -12px;
 }
 
 .mdl-textfield__label:after {
-    background-color: #03A9F4;
+  background-color: #03a9f4;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.text-emphasis-high {
+  opacity: 0.87;
+}
